--- a/_demo/adjustment/env/font-setting/typeface-serif-sans-serif-monospace/config/basic/fonts.conf
+++ b/_demo/adjustment/env/font-setting/typeface-serif-sans-serif-monospace/config/basic/fonts.conf
@@ -57,6 +57,9 @@
 		//-->
 
 
+		<string>JetBrains Mono</string>
+
+
 		<!-- Please install Liberation Sans Mono first -->
 		<!-- pamac install ttf-liberation -->
 		<string>Liberation Mono</string>
